Version: 0.4.3
Date: ???
  Changes:
    - Adjusted module bonuses to smooth out the progression curve
      - Reduced Productivity Module 0 speed penalty from -15% to -10%
      - Reduced Productivity Module 1 speed penalty from -15% to -12%
      - Reduced Productivity Module 2 speed penalty from -15% to -14%
      - Reduced Productivity Module 2 productivity bonus from +10% to +8%
---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 14.08.2021
  Changes:
    - Updated tech icons to match new vanilla style
    - Added missing tech prerequisites
    - Changed advanced processing unit to use gold plate instead of silver plate (if chrome isn't enabled)
    - Handle Angel's circuit wire changes
  Bugfixes:
    - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 06.03.2021
  Changes:
    - Hide pollution module boards
    - Update Japanese locale
  Bugfixes:
    - Electronic circuit and Advanced circuit will no longer be broken down in Total Raw tooltip
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 16.12.2020
  Changes:
    - Factorio 1.1 update
    - Disabled Agriculture Modules. These will be revisited later
  Bugfixes:
    - Fixed modules technology icons
    - Renamed Effectivity Modules to Efficiency Modules to match fix in Bob's Modules Mod
---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 18. 8. 2020
  Changes:
    - Fix module technology icons
    - Redundant normal/expensive recipe handling
---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 6. 7. 2020
  Changes:
    - Fix module_slot sprite count