@@ -1,25 +1,46 @@
 [item-name]
-cp-electronic-circuit=Electronic circuit
-cp-advanced-circuit=Advanced circuit
-cp-processing-unit=Processing unit
-cp-advanced-processing-unit=Advanced processing unit
-speed-module-0=Speed module 0
-effectivity-module-0=Efficiency module 0
-productivity-module-0=Productivity module 0
-speed-module-1=Speed module 1
-effectivity-module-1=Efficiency module 1
-productivity-module-1=Productivity module 1
-speed-module-0-harness=Speed module 0 cable harness
-speed-module-1-harness=Speed module 1 cable harness
-speed-module-2-harness=Speed module 2 cable harness
-speed-module-3-harness=Speed module 3 cable harness
+# T0 Brown
+basic-circuit-board=Basic circuit
+
+# T1 Green
+cp-electronic-circuit-board=Electronic circuit board
+electronic-circuit=Electronic circuit
+
+# T2 Red
+circuit-board=Advanced circuit substrate
+cp-advanced-circuit-board=Advanced circuit board
+advanced-circuit=Advanced circuit
+
+# T3 Blue
+superior-circuit-board=Processing substrate
+cp-processing-board=Processing board
+processing-unit=Processing unit
+
+# T4 Black
+multi-layer-circuit-board=Advanced processing substrate
+cp-advanced-processing-board=Advanced processing board
+advanced-processing-unit=Advanced processing unit
+
 effectivity-module-0-harness=Efficiency module 0 cable harness
+effectivity-module-0=Efficiency module 0
 effectivity-module-1-harness=Efficiency module 1 cable harness
+effectivity-module-1=Efficiency module 1
 effectivity-module-2-harness=Efficiency module 2 cable harness
 effectivity-module-3-harness=Efficiency module 3 cable harness
+
 productivity-module-0-harness=Productivity module 0 cable harness
+productivity-module-0=Productivity module 0
 productivity-module-1-harness=Productivity module 1 cable harness
+productivity-module-1=Productivity module 1
 productivity-module-2-harness=Productivity module 2 cable harness
 productivity-module-3-harness=Productivity module 3 cable harness
+
+speed-module-0-harness=Speed module 0 cable harness
+speed-module-0=Speed module 0
+speed-module-1-harness=Speed module 1 cable harness
+speed-module-1=Speed module 1
+speed-module-2-harness=Speed module 2 cable harness
+speed-module-3-harness=Speed module 3 cable harness
+
 [mod-setting-name]
 cp-override-modules=Override module settings
