@@ -1,25 +1,46 @@
 [item-name]
-cp-electronic-circuit=電子基板
-cp-advanced-circuit=発展基板
-cp-processing-unit=制御基板
-cp-advanced-processing-unit=高度な処理ユニット
-speed-module-0=生産速度モジュール0
-effectivity-module-0=エネルギー効率モジュール0
-productivity-module-0=生産力モジュール0
-speed-module-1=生産速度モジュール1
-effectivity-module-1=エネルギー効率モジュール1
-productivity-module-1=生産力モジュール1
-speed-module-0-harness=生産速度モジュール0 ケーブルハーネス
-speed-module-1-harness=生産速度モジュール1 ケーブルハーネス
-speed-module-2-harness=生産速度モジュール2 ケーブルハーネス
-speed-module-3-harness=生産速度モジュール3 ケーブルハーネス
+# T0 Brown
+#basic-circuit-board=
+
+# T1 Green
+cp-electronic-circuit-board=電子基板
+#electronic-circuit=
+
+# T2 Red
+#circuit-board=
+cp-advanced-circuit-board=発展基板
+#advanced-circuit=
+
+# T3 Blue
+#superior-circuit-board=
+cp-processing-board=制御基板
+#processing-unit=
+
+# T4 Black
+#multi-layer-circuit-board=
+cp-advanced-processing-board=高度な処理ユニット
+#advanced-processing-unit=
+
 effectivity-module-0-harness=エネルギー効率モジュール0 ケーブルハーネス
+effectivity-module-0=エネルギー効率モジュール0
 effectivity-module-1-harness=エネルギー効率モジュール1 ケーブルハーネス
+effectivity-module-1=エネルギー効率モジュール1
 effectivity-module-2-harness=エネルギー効率モジュール2 ケーブルハーネス
 effectivity-module-3-harness=エネルギー効率モジュール3 ケーブルハーネス
+
 productivity-module-0-harness=生産力モジュール0 ケーブルハーネス
+productivity-module-0=生産力モジュール0
 productivity-module-1-harness=生産力モジュール1 ケーブルハーネス
+productivity-module-1=生産力モジュール1
 productivity-module-2-harness=生産力モジュール2 ケーブルハーネス
 productivity-module-3-harness=生産力モジュール3 ケーブルハーネス
+
+speed-module-0-harness=生産速度モジュール0 ケーブルハーネス
+speed-module-0=生産速度モジュール0
+speed-module-1-harness=生産速度モジュール1 ケーブルハーネス
+speed-module-1=生産速度モジュール1
+speed-module-2-harness=生産速度モジュール2 ケーブルハーネス
+speed-module-3-harness=生産速度モジュール3 ケーブルハーネス
+
 [mod-setting-name]
 cp-override-modules=モジュール設定の上書き
