@@ -7,6 +7,7 @@ Date: ???
       - Reduced Productivity Module 1 speed penalty from -15% to -12%
       - Reduced Productivity Module 2 speed penalty from -15% to -14%
       - Reduced Productivity Module 2 productivity bonus from +10% to +8%
+    - Renamed circuit boards for consistency
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.2
 Date: 14.08.2021
